tdf#167143: set text of the correct row

Regression after commit 00e2762c664614a1b33f54dfc990ba29f0f81a07
(Drop uses of css::uno::Sequence::getConstArray in cppuhelper ..
cui, 2024-04-29).

Change-Id: I9544160ee3857c3ef8322c85529f5ff6a4ce0e2c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192055
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins